# real-end-to-end-ml

./: LICENSE  README.md  pyproject.toml
.devcontainer/: .devconatiner.json
data/: data_info.md
data/processed/: NPHA-doctor-visits_version1_cleaned.csv  preprocessed_data.csv
data/processed/NHPA-doctor-visits-preprocessed-version1/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
data/raw/: cleaned_data.csv
mlruns/0/: meta.yaml
mlruns/282485643113981523/: meta.yaml
mlruns/282485643113981523/5cecce65dd46400b96de71b420042e4a/: meta.yaml
mlruns/282485643113981523/5cecce65dd46400b96de71b420042e4a/metrics/: accuracy  f1_score  precision
mlruns/282485643113981523/5cecce65dd46400b96de71b420042e4a/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/282485643113981523/63b114acce1d4704b263f61355e5fb1f/: meta.yaml
mlruns/282485643113981523/63b114acce1d4704b263f61355e5fb1f/metrics/: accuracy  f1_score  precision
mlruns/282485643113981523/63b114acce1d4704b263f61355e5fb1f/tags/: mlflow.log-model.history  mlflow.runName
mlruns/282485643113981523/77c55996fcaa4b50b81b9111038c5fda/: meta.yaml
mlruns/282485643113981523/77c55996fcaa4b50b81b9111038c5fda/metrics/: f1_score  precision  recall
notebooks/: main_notebook.ipynb
src/: custom_exceptions.py
src/data_loading/: data_ingestion.py
src/feature_selection/: feature_selection.py  selected_features.csv
src/logging/: custom_logger.py
src/model_building/: model_building.py
src/preprocessing/: data_preprocessing.py
(+8 files in other folders)
