[tool.poetry]
name = "ml_project"
version = "0.1.0"
description = "End-to-end ML project"
authors = ["Muhammad Taaha "]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.145"
numpy = "^1.9.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
mlflow = "^2.14.3"
feast = "^0.39.1"
xgboost = "^2.1.0"
catboost = "^1.2.5"
seaborn = "^0.13.2"
fastapi = "^0.111.1"
python-dotenv = "^1.0.1"
plotly = "^5.22.0"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
